Fix wrapping arrow on NL sign up page

--- a/app/assets/stylesheets/form_only.sass
+++ b/app/assets/stylesheets/form_only.sass
@@ -60,6 +60,9 @@ body
         line-height: 22px
         padding-right: 10px
 
+        &.org-options
+          margin-right: -25px
+
         .choice
           color: #4b8ac2
           cursor: pointer
